<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SharingImage">



    <ImageView
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_width="274dp"
        android:layout_height="228dp"
        android:layout_marginTop="28dp"
        android:onClick="selectImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="276dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="Title:"
        android:inputType="text"
        android:textColor="#EC9E85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />


    <EditText
        android:id="@+id/dateText"
        android:layout_width="276dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Date: "
        android:inputType="text"
        android:textColor="#4EE6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        />

    <EditText
        android:textColor="#F1E570"
        android:id="@+id/placeText"
        android:layout_width="276dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Place: "
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText"
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="113dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#42DC48"
        android:onClick="save"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeText" />
</androidx.constraintlayout.widget.ConstraintLayout>

