...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:id="@+id/imageName"
        android:layout_width="126dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
